<resources>
    <string name="app_name">ProyectoFinalMovil3</string>

    <string name="nombreApp">EcoTrack</string>

    <!-- vista inicio de sesion -->
    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="fraseInicio">Únete a nuestra comunidad ambiental</string>
    <string name="correo">Correo Electronico</string>
    <string name="muestraCorreo">tu@correo.com</string>
    <string name="contrasena">Contraseña</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="nombreCompleto">Nombre Completo</string>

    <!-- vista perfil -->
    <string name="perfil">Perfil \nAdministra tu cuenta</string>
    <string name="miembro">Miembro de EcoTrack</string>
    <string name="editarInfo">Editar Perfil</string>
    <string name="actualizar">Actualizar</string>
    <string name="actividad">Tu Actividad</string>
    <string name="eventos">Eventos</string>
    <string name="pasos">Pasos</string>
    <string name="Logros">Logros</string>
    <string name="acercaDe">Acerca de</string>
    <string name="version">Version</string>
    <string name="numVersion">1.0</string>
    <string name="organizacion">Organizacion</string>
    <string name="cerrarSesion">Cerrar Sesion</string>

    <!-- vista preview evento -->

    <string name="fecha">Fecha</string>
    <string name="categoria">Categoria</string>
    <string name="inscritos">Inscritos</string>
    <string name="lugar">Lugar</string>
    <string name="inscribirse">Inscribirse</string>

</resources>