<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/encabezados"
                android:paddingTop="30dp"
                android:text="@string/perfil"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:paddingLeft="15dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bordes_redondos"
                android:layout_margin="10dp"
                android:padding="20dp"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/outline_account_circle_24"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/miembro"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/nombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="6dp"
                    app:drawableTint="@color/colorTextSecondary"
                    />

                <EditText
                    android:id="@+id/nombreUsuarioEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:id="@+id/correoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="6dp"
                    app:drawableTint="@color/colorTextSecondary"
                    />

                <Button
                    android:id="@+id/editarPerfilButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editarInfo"
                    android:backgroundTint="@color/botonesSecundario2"
                    android:textColor="@color/blanco"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/outline_edit_24"
                    android:drawablePadding="0dp"
                    android:paddingLeft="120dp"
                    />

                <Button
                    android:id="@+id/actualizarButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actualizar"
                    android:backgroundTint="@color/botonesSecundario2"
                    android:textColor="@color/blanco"
                    android:visibility="gone"
                    />
                <Button
                    android:id="@+id/cambiarFotoButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cambiar Foto"
                    android:backgroundTint="@color/botonesSecundario2"
                    android:textColor="@color/blanco"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bordes_redondos"
                android:layout_margin="10dp"
                android:padding="20dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acercaDe"
                    android:layout_marginTop="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/numVersion"
                        android:textAlignment="viewEnd"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/organizacion"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreApp"
                        android:textAlignment="viewEnd"
                        android:layout_weight="1"
                        />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/cerrarSesionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/cerrarSesion"
                android:backgroundTint="@color/botonesSecundario2"
                android:textColor="@color/blanco"
                />
            <Button
                android:id="@+id/adminButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Admin"
                android:backgroundTint="@color/encabezados"
                android:textColor="@android:color/white"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>
</FrameLayout>
