<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".previewEvento"
    android:background="@color/colorAccentGreen"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/bordes_redondos"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/tituloTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Titulo"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <TextView
            android:id="@+id/descripcionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descripcion"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/mesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                />
            <TextView
                android:id="@+id/diaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/horaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:textAlignment="viewEnd"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/categoriaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/lugarTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugar"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscritos"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/inscritosTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscritos"
            />


        <Button
            android:id="@+id/inscribirseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/inscribirse"
            android:backgroundTint="@color/colorAccentGreen"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>